# project_churn-prediction

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Campanhas de Marketing-checkpoint.ipynb  Churn de Clientes - wo NB-checkpoint.ipynb  Churn de Clientes-checkpoint.ipynb
data/processed/: WA_Fn-UseC_-Telco-Customer-Churn_eda.csv  WA_Fn-UseC_-Telco-Customer-Churn_modeling_X.csv  WA_Fn-UseC_-Telco-Customer-Churn_modeling_y.csv
models/: DT.pkl  KNN.pkl  LR.pkl  RF.pkl  SVM.pkl  XGB.pkl
notebooks/: 01_eda.ipynb  02_modeling-and-evaluation.ipynb  02_modeling.ipynb  02_modeling_evaluation.ipynb  03_model-comparison_threshold-tuning.ipynb  03_threshold-tuning.ipynb  04_sql.ipynb
notebooks/.ipynb_checkpoints/: 03_threshold_tuning-checkpoint.ipynb  Churn de Clientes - FINAL-checkpoint.ipynb
reports/tables/: chi2-test_results.csv  final-comparison_standard-threshold.csv  final-comparison_threshold-tuning_R-10.csv  final-comparison_threshold-tuning_R-2.csv  final-comparison_threshold-tuning_R-5.csv  hyperparam-optimization_DT.csv  hyperparam-optimization_KNN.csv  hyperparam-optimization_RF.csv  hyperparam-optimization_SVM.csv  hyperparam-optimization_XGB.csv  model-evaluation_DT.csv  model-evaluation_KNN.csv  model-evaluation_LR.csv  model-evaluation_RF.csv  model-evaluation_SVM.csv  model-evaluation_XGB.csv
sql/: query_churn-distribution.sql  query_contract-distribution.sql  query_retrieving-complete-dataset.sql
src/: eda.py  evaluation.py  modeling.py  models.py  preprocessing.py  utils.py
src/churn_proj/eda/: __init__.py  (+2 more)
(+14 files in other folders)
