[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "churn_proj"
version = "1.0.0"
description = "Customer Churn Prediction Project"
authors = [{ name = "Levy F. S. Saldanha" }]
dependencies = [
	"numpy==2.4.1",
	"pandas==2.3.3",
	"scipy==1.16.3",
	"matplotlib==3.10.7",
	"seaborn==0.13.2",
	"scikit-learn==1.5.2",
	"xgboost",
	"joblib",
	"jupyter",
	"tqdm"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]